--- a/backend/koffee-backend/eu.yeger.koffee.routing/authentication-routes.html
+++ b/backend/koffee-backend/eu.yeger.koffee.routing/authentication-routes.html
@@ -25,7 +25,7 @@
           <div class="cover ">
             <h1 class="cover"><a data-name="authenticationroutes"></a>authenticationRoutes</h1>
           </div>
-<div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="block"><div class="block">Appends eu.yeger.koffee.authentication-related routes to the base route.</div></div><div class="block"><h4 class="block"><a data-name="author"></a>Author</h4><div class="block">Jan Müller</div></div></div>
+<div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="block"><div class="block">Appends authentication-related routes to the base route.</div></div><div class="block"><h4 class="block"><a data-name="author"></a>Author</h4><div class="block">Jan Müller</div></div></div>
 <span class="pull-right"></span></div>
 
   <div class="main-subrow">
