--- a/backend/koffee-backend/eu.yeger.koffee.routing/index.html
+++ b/backend/koffee-backend/eu.yeger.koffee.routing/index.html
@@ -41,7 +41,7 @@
                       </span></span></div>
                   <div class="platform-dependent-row keyValue">
                     <div></div>
-                    <div class="title"><div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="brief ">Appends eu.yeger.koffee.authentication-related routes to the base route.</div></div>
+                    <div class="title"><div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="brief ">Appends authentication-related routes to the base route.</div></div>
 <span class="pull-right"></span></div>
 
   <div class="main-subrow">
@@ -93,7 +93,7 @@
                       </span></span></div>
                   <div class="platform-dependent-row keyValue">
                     <div></div>
-                    <div class="title"><div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="brief ">Installs and configures the eu.yeger.koffee.routing and StatusPages modules.</div></div>
+                    <div class="title"><div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="brief ">Installs and configures the routing and StatusPages modules.</div></div>
 <span class="pull-right"></span></div>
 
   <div class="main-subrow">
