--- a/backend/navigation.html
+++ b/backend/navigation.html
@@ -62,11 +62,11 @@
     <div class="sideMenuPart" id="nav-submenu-4-0" pageId="eu.yeger.koffee.model.dto//andThen/eu.yeger.koffee.model.dto.Result[TypeParam(bounds=[kotlin.Any])]#kotlin.coroutines.SuspendFunction1[TypeParam(bounds=[kotlin.Any]),eu.yeger.koffee.model.dto.Result[TypeParam(bounds=[kotlin.Any])]]/PointingToDeclaration/">
       <div class="overview"><a href="koffee-backend/eu.yeger.koffee.model.dto/and-then.html">andThen</a></div>
     </div>
-    <div class="sideMenuPart" id="nav-submenu-4-1" pageId="eu.yeger.koffee.model.dto//asProfile/eu.yeger.koffee.model.domain.User#/PointingToDeclaration/">
-      <div class="overview"><a href="koffee-backend/eu.yeger.koffee.model.dto/as-profile.html">asProfile</a></div>
+    <div class="sideMenuPart" id="nav-submenu-4-1" pageId="eu.yeger.koffee.model.dto//asDomainUser/eu.yeger.koffee.model.dto.PartialUser#eu.yeger.koffee.model.domain.ProfileImage?/PointingToDeclaration/">
+      <div class="overview"><a href="koffee-backend/eu.yeger.koffee.model.dto/as-domain-user.html">asDomainUser</a></div>
     </div>
-    <div class="sideMenuPart" id="nav-submenu-4-2" pageId="eu.yeger.koffee.model.dto//asUser/eu.yeger.koffee.model.dto.PartialUser#/PointingToDeclaration/">
-      <div class="overview"><a href="koffee-backend/eu.yeger.koffee.model.dto/as-user.html">asUser</a></div>
+    <div class="sideMenuPart" id="nav-submenu-4-2" pageId="eu.yeger.koffee.model.dto//asProfile/eu.yeger.koffee.model.domain.User#/PointingToDeclaration/">
+      <div class="overview"><a href="koffee-backend/eu.yeger.koffee.model.dto/as-profile.html">asProfile</a></div>
     </div>
     <div class="sideMenuPart" id="nav-submenu-4-3" pageId="eu.yeger.koffee.model.dto//asUserListEntry/eu.yeger.koffee.model.domain.User#/PointingToDeclaration/">
       <div class="overview"><a href="koffee-backend/eu.yeger.koffee.model.dto/as-user-list-entry.html">asUserListEntry</a></div>
@@ -107,22 +107,16 @@
   </div>
   <div class="sideMenuPart" id="nav-submenu-5" pageId="eu.yeger.koffee.repository////PointingToDeclaration/">
     <div class="overview"><a href="koffee-backend/eu.yeger.koffee.repository/index.html">eu.yeger.koffee.repository</a><span class="navButton" onclick="document.getElementById(&quot;nav-submenu-5&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span></div>
-    <div class="sideMenuPart" id="nav-submenu-5-0" pageId="eu.yeger.koffee.repository/ImageRepository///PointingToDeclaration/">
-      <div class="overview"><a href="koffee-backend/eu.yeger.koffee.repository/-image-repository/index.html">ImageRepository</a></div>
-    </div>
-    <div class="sideMenuPart" id="nav-submenu-5-1" pageId="eu.yeger.koffee.repository/ItemRepository///PointingToDeclaration/">
+    <div class="sideMenuPart" id="nav-submenu-5-0" pageId="eu.yeger.koffee.repository/ItemRepository///PointingToDeclaration/">
       <div class="overview"><a href="koffee-backend/eu.yeger.koffee.repository/-item-repository/index.html">ItemRepository</a></div>
     </div>
-    <div class="sideMenuPart" id="nav-submenu-5-2" pageId="eu.yeger.koffee.repository/MongoImageRepository///PointingToDeclaration/">
-      <div class="overview"><a href="koffee-backend/eu.yeger.koffee.repository/-mongo-image-repository/index.html">MongoImageRepository</a></div>
-    </div>
-    <div class="sideMenuPart" id="nav-submenu-5-3" pageId="eu.yeger.koffee.repository/MongoItemRepository///PointingToDeclaration/">
+    <div class="sideMenuPart" id="nav-submenu-5-1" pageId="eu.yeger.koffee.repository/MongoItemRepository///PointingToDeclaration/">
       <div class="overview"><a href="koffee-backend/eu.yeger.koffee.repository/-mongo-item-repository/index.html">MongoItemRepository</a></div>
     </div>
-    <div class="sideMenuPart" id="nav-submenu-5-4" pageId="eu.yeger.koffee.repository/MongoUserRepository///PointingToDeclaration/">
+    <div class="sideMenuPart" id="nav-submenu-5-2" pageId="eu.yeger.koffee.repository/MongoUserRepository///PointingToDeclaration/">
       <div class="overview"><a href="koffee-backend/eu.yeger.koffee.repository/-mongo-user-repository/index.html">MongoUserRepository</a></div>
     </div>
-    <div class="sideMenuPart" id="nav-submenu-5-5" pageId="eu.yeger.koffee.repository/UserRepository///PointingToDeclaration/">
+    <div class="sideMenuPart" id="nav-submenu-5-3" pageId="eu.yeger.koffee.repository/UserRepository///PointingToDeclaration/">
       <div class="overview"><a href="koffee-backend/eu.yeger.koffee.repository/-user-repository/index.html">UserRepository</a></div>
     </div>
   </div>
@@ -143,11 +137,11 @@
   </div>
   <div class="sideMenuPart" id="nav-submenu-7" pageId="eu.yeger.koffee.service////PointingToDeclaration/">
     <div class="overview"><a href="koffee-backend/eu.yeger.koffee.service/index.html">eu.yeger.koffee.service</a><span class="navButton" onclick="document.getElementById(&quot;nav-submenu-7&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span></div>
-    <div class="sideMenuPart" id="nav-submenu-7-0" pageId="eu.yeger.koffee.service/DefaultImageService///PointingToDeclaration/">
-      <div class="overview"><a href="koffee-backend/eu.yeger.koffee.service/-default-image-service/index.html">DefaultImageService</a></div>
-    </div>
-    <div class="sideMenuPart" id="nav-submenu-7-1" pageId="eu.yeger.koffee.service/DefaultItemService///PointingToDeclaration/">
+    <div class="sideMenuPart" id="nav-submenu-7-0" pageId="eu.yeger.koffee.service/DefaultItemService///PointingToDeclaration/">
       <div class="overview"><a href="koffee-backend/eu.yeger.koffee.service/-default-item-service/index.html">DefaultItemService</a></div>
+    </div>
+    <div class="sideMenuPart" id="nav-submenu-7-1" pageId="eu.yeger.koffee.service/DefaultProfileImageService///PointingToDeclaration/">
+      <div class="overview"><a href="koffee-backend/eu.yeger.koffee.service/-default-profile-image-service/index.html">DefaultProfileImageService</a></div>
     </div>
     <div class="sideMenuPart" id="nav-submenu-7-2" pageId="eu.yeger.koffee.service/DefaultTransactionService///PointingToDeclaration/">
       <div class="overview"><a href="koffee-backend/eu.yeger.koffee.service/-default-transaction-service/index.html">DefaultTransactionService</a></div>
@@ -155,11 +149,11 @@
     <div class="sideMenuPart" id="nav-submenu-7-3" pageId="eu.yeger.koffee.service/DefaultUserService///PointingToDeclaration/">
       <div class="overview"><a href="koffee-backend/eu.yeger.koffee.service/-default-user-service/index.html">DefaultUserService</a></div>
     </div>
-    <div class="sideMenuPart" id="nav-submenu-7-4" pageId="eu.yeger.koffee.service/ImageService///PointingToDeclaration/">
-      <div class="overview"><a href="koffee-backend/eu.yeger.koffee.service/-image-service/index.html">ImageService</a></div>
-    </div>
-    <div class="sideMenuPart" id="nav-submenu-7-5" pageId="eu.yeger.koffee.service/ItemService///PointingToDeclaration/">
+    <div class="sideMenuPart" id="nav-submenu-7-4" pageId="eu.yeger.koffee.service/ItemService///PointingToDeclaration/">
       <div class="overview"><a href="koffee-backend/eu.yeger.koffee.service/-item-service/index.html">ItemService</a></div>
+    </div>
+    <div class="sideMenuPart" id="nav-submenu-7-5" pageId="eu.yeger.koffee.service/ProfileImageService///PointingToDeclaration/">
+      <div class="overview"><a href="koffee-backend/eu.yeger.koffee.service/-profile-image-service/index.html">ProfileImageService</a></div>
     </div>
     <div class="sideMenuPart" id="nav-submenu-7-6" pageId="eu.yeger.koffee.service/TransactionService///PointingToDeclaration/">
       <div class="overview"><a href="koffee-backend/eu.yeger.koffee.service/-transaction-service/index.html">TransactionService</a></div>
@@ -200,17 +194,17 @@
     <div class="sideMenuPart" id="nav-submenu-8-9" pageId="eu.yeger.koffee.utility//to/kotlin.reflect.KProperty[TypeParam(bounds=[kotlin.Any?])]#TypeParam(bounds=[kotlin.Any?])/PointingToDeclaration/">
       <div class="overview"><a href="koffee-backend/eu.yeger.koffee.utility/to.html">to</a></div>
     </div>
-    <div class="sideMenuPart" id="nav-submenu-8-10" pageId="eu.yeger.koffee.utility//upsert/org.litote.kmongo.coroutine.CoroutineCollection[TypeParam(bounds=[eu.yeger.koffee.model.domain.Entity])]#TypeParam(bounds=[eu.yeger.koffee.model.domain.Entity])#com.mongodb.client.model.UpdateOptions/PointingToDeclaration/">
+    <div class="sideMenuPart" id="nav-submenu-8-10" pageId="eu.yeger.koffee.utility//updateById/org.litote.kmongo.coroutine.CoroutineCollection[TypeParam(bounds=[eu.yeger.koffee.model.domain.Entity])]#kotlin.String#org.bson.conversions.Bson/PointingToDeclaration/">
+      <div class="overview"><a href="koffee-backend/eu.yeger.koffee.utility/update-by-id.html">updateById</a></div>
+    </div>
+    <div class="sideMenuPart" id="nav-submenu-8-11" pageId="eu.yeger.koffee.utility//upsert/org.litote.kmongo.coroutine.CoroutineCollection[TypeParam(bounds=[eu.yeger.koffee.model.domain.Entity])]#TypeParam(bounds=[eu.yeger.koffee.model.domain.Entity])#com.mongodb.client.model.UpdateOptions/PointingToDeclaration/">
       <div class="overview"><a href="koffee-backend/eu.yeger.koffee.utility/upsert.html">upsert</a></div>
     </div>
-    <div class="sideMenuPart" id="nav-submenu-8-11" pageId="eu.yeger.koffee.utility//validateItemDoesNotExist/eu.yeger.koffee.repository.ItemRepository#eu.yeger.koffee.model.domain.Item/PointingToDeclaration/">
+    <div class="sideMenuPart" id="nav-submenu-8-12" pageId="eu.yeger.koffee.utility//validateItemDoesNotExist/eu.yeger.koffee.repository.ItemRepository#eu.yeger.koffee.model.domain.Item/PointingToDeclaration/">
       <div class="overview"><a href="koffee-backend/eu.yeger.koffee.utility/validate-item-does-not-exist.html">validateItemDoesNotExist</a></div>
     </div>
-    <div class="sideMenuPart" id="nav-submenu-8-12" pageId="eu.yeger.koffee.utility//validateItemExists/eu.yeger.koffee.repository.ItemRepository#kotlin.String/PointingToDeclaration/">
+    <div class="sideMenuPart" id="nav-submenu-8-13" pageId="eu.yeger.koffee.utility//validateItemExists/eu.yeger.koffee.repository.ItemRepository#kotlin.String/PointingToDeclaration/">
       <div class="overview"><a href="koffee-backend/eu.yeger.koffee.utility/validate-item-exists.html">validateItemExists</a></div>
-    </div>
-    <div class="sideMenuPart" id="nav-submenu-8-13" pageId="eu.yeger.koffee.utility//validateProfileImageExists/eu.yeger.koffee.repository.ImageRepository#kotlin.String/PointingToDeclaration/">
-      <div class="overview"><a href="koffee-backend/eu.yeger.koffee.utility/validate-profile-image-exists.html">validateProfileImageExists</a></div>
     </div>
     <div class="sideMenuPart" id="nav-submenu-8-14" pageId="eu.yeger.koffee.utility//validateUserDoesNotExist/eu.yeger.koffee.repository.UserRepository#eu.yeger.koffee.model.dto.PartialUser/PointingToDeclaration/">
       <div class="overview"><a href="koffee-backend/eu.yeger.koffee.utility/validate-user-does-not-exist.html">validateUserDoesNotExist</a></div>
