--- a/backend/koffee-backend/eu.yeger.koffee.model.dto/as-domain-user.html
+++ b/backend/koffee-backend/eu.yeger.koffee.model.dto/as-domain-user.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
-    <title>asUser</title>
+    <title>asDomainUser</title>
     <link href="../../styles/style.css" rel="Stylesheet">
     <script type="text/javascript" src="../../scripts/navigationLoader.js" async="async"></script>
     <script type="text/javascript" src="../../scripts/platformContentHandler.js" async="async"></script>
@@ -20,16 +20,16 @@
         <div id="searchBar"></div>
         <script type="text/javascript" src="../../scripts/pages.js"></script>
         <script type="text/javascript" src="../../scripts/main.js"></script>
-        <div id="content" pageIds="eu.yeger.koffee.model.dto//asUser/eu.yeger.koffee.model.dto.PartialUser#/PointingToDeclaration/">
-          <div class="breadcrumbs">//<a href="../index.html">koffee-backend</a>/<a href="index.html">eu.yeger.koffee.model.dto</a>/<a href="as-user.html">asUser</a></div>
+        <div id="content" pageIds="eu.yeger.koffee.model.dto//asDomainUser/eu.yeger.koffee.model.dto.PartialUser#eu.yeger.koffee.model.domain.ProfileImage?/PointingToDeclaration/">
+          <div class="breadcrumbs">//<a href="../index.html">koffee-backend</a>/<a href="index.html">eu.yeger.koffee.model.dto</a>/<a href="as-domain-user.html">asDomainUser</a></div>
           <div class="cover ">
-            <h1 class="cover"><a data-name="asuser"></a>asUser</h1>
+            <h1 class="cover"><a data-name="asdomainuser"></a>asDomainUser</h1>
           </div>
 <div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="block"><div class="block">Extension method for turning <a href="-partial-user/index.html">PartialUser</a>s into <a href="../eu.yeger.koffee.model.domain/-user/index.html">User</a>s without <a href="../eu.yeger.koffee.model.domain/-transaction/index.html">Transaction</a>s.</div></div><div class="block"><h4 class="block"><a data-name="author"></a>Author</h4><div class="block">Jan Müller</div></div></div>
 <span class="pull-right"></span></div>
 
   <div class="main-subrow">
-    <div class="platform-hinted " data-platform-hinted="data-platform-hinted"><div class="content sourceset-depenent-content" data-active="" data-togglable=":/main"><div class="symbol "><div class="symbol monospace">fun <a href="-partial-user/index.html">PartialUser</a>.<a href="as-user.html">asUser</a>(): <a href="../eu.yeger.koffee.model.domain/-user/index.html">User</a><span class="top-right-position"><span class="copy-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <div class="platform-hinted " data-platform-hinted="data-platform-hinted"><div class="content sourceset-depenent-content" data-active="" data-togglable=":/main"><div class="symbol "><div class="symbol monospace">fun <a href="-partial-user/index.html">PartialUser</a>.<a href="as-domain-user.html">asDomainUser</a>(profileImage: <a href="../eu.yeger.koffee.model.domain/-profile-image/index.html">ProfileImage</a>?): <a href="../eu.yeger.koffee.model.domain/-user/index.html">User</a><span class="top-right-position"><span class="copy-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M5 4H15V16H5V4ZM17 7H19V18V20H17H8V18H17V7Z" fill="black"/>
                        </svg></span><div class="copy-popup-wrapper popup-to-left"><svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path d="M18 9C18 14 14 18 9 18C4 18 0 14 0 9C0 4 4 0 9 0C14 0 18 4 18 9ZM14.2 6.2L12.8 4.8L7.5 10.1L5.3 7.8L3.8 9.2L7.5 13L14.2 6.2Z" fill="#4DBB5F"/>
