--- a/backend/koffee-backend/eu.yeger.koffee.repository/-mongo-item-repository/index.html
+++ b/backend/koffee-backend/eu.yeger.koffee.repository/-mongo-item-repository/index.html
@@ -95,7 +95,7 @@
                       </span></span></div>
                   <div class="platform-dependent-row keyValue">
                     <div></div>
-                    <div class="title"><div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="brief ">Retrieves all <a href="../../eu.yeger.koffee.model.domain/-item/index.html">Item</a>s from the eu.yeger.koffee.repository.</div></div>
+                    <div class="title"><div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="brief ">Retrieves all <a href="../../eu.yeger.koffee.model.domain/-item/index.html">Item</a>s from the repository.</div></div>
 <span class="pull-right"></span></div>
 
   <div class="main-subrow">
@@ -121,7 +121,7 @@
                       </span></span></div>
                   <div class="platform-dependent-row keyValue">
                     <div></div>
-                    <div class="title"><div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="brief ">Retrieves an <a href="../../eu.yeger.koffee.model.domain/-item/index.html">Item</a> from the eu.yeger.koffee.repository.</div></div>
+                    <div class="title"><div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="brief ">Retrieves an <a href="../../eu.yeger.koffee.model.domain/-item/index.html">Item</a> from the repository.</div></div>
 <span class="pull-right"></span></div>
 
   <div class="main-subrow">
@@ -173,7 +173,7 @@
                       </span></span></div>
                   <div class="platform-dependent-row keyValue">
                     <div></div>
-                    <div class="title"><div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="brief ">Checks if the eu.yeger.koffee.repository contains a specific <a href="../../eu.yeger.koffee.model.domain/-item/index.html">Item</a>.</div></div>
+                    <div class="title"><div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="brief ">Checks if the repository contains a specific <a href="../../eu.yeger.koffee.model.domain/-item/index.html">Item</a>.</div></div>
 <span class="pull-right"></span></div>
 
   <div class="main-subrow">
@@ -199,7 +199,7 @@
                       </span></span></div>
                   <div class="platform-dependent-row keyValue">
                     <div></div>
-                    <div class="title"><div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="brief ">Inserts an <a href="../../eu.yeger.koffee.model.domain/-item/index.html">Item</a> into the eu.yeger.koffee.repository.</div></div>
+                    <div class="title"><div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="brief ">Inserts an <a href="../../eu.yeger.koffee.model.domain/-item/index.html">Item</a> into the repository.</div></div>
 <span class="pull-right"></span></div>
 
   <div class="main-subrow">
@@ -225,7 +225,7 @@
                       </span></span></div>
                   <div class="platform-dependent-row keyValue">
                     <div></div>
-                    <div class="title"><div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="brief ">Removes an <a href="../../eu.yeger.koffee.model.domain/-item/index.html">Item</a> from the eu.yeger.koffee.repository.</div></div>
+                    <div class="title"><div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="brief ">Removes an <a href="../../eu.yeger.koffee.model.domain/-item/index.html">Item</a> from the repository.</div></div>
 <span class="pull-right"></span></div>
 
   <div class="main-subrow">
@@ -277,7 +277,7 @@
                       </span></span></div>
                   <div class="platform-dependent-row keyValue">
                     <div></div>
-                    <div class="title"><div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="brief ">Updates the amount of an <a href="../../eu.yeger.koffee.model.domain/-item/index.html">Item</a> from the eu.yeger.koffee.repository.</div></div>
+                    <div class="title"><div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="brief ">Updates the amount of an <a href="../../eu.yeger.koffee.model.domain/-item/index.html">Item</a> from the repository.</div></div>
 <span class="pull-right"></span></div>
 
   <div class="main-subrow">
