--- a/backend/koffee-backend/eu.yeger.koffee.repository/-mongo-user-repository/get-all.html
+++ b/backend/koffee-backend/eu.yeger.koffee.repository/-mongo-user-repository/get-all.html
@@ -25,7 +25,7 @@
           <div class="cover ">
             <h1 class="cover"><a data-name="getall"></a>getAll</h1>
           </div>
-<div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="block"><div class="block">Retrieves all <a href="../../eu.yeger.koffee.model.domain/-user/index.html">User</a>s from the eu.yeger.koffee.repository.</div></div><div class="block"><h4 class="block"><a data-name="return"></a>Return</h4><div class="block">All available <a href="../../eu.yeger.koffee.model.domain/-user/index.html">User</a>s.</div></div></div>
+<div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="block"><div class="block">Retrieves all <a href="../../eu.yeger.koffee.model.domain/-user/index.html">User</a>s from the repository.</div></div><div class="block"><h4 class="block"><a data-name="return"></a>Return</h4><div class="block">All available <a href="../../eu.yeger.koffee.model.domain/-user/index.html">User</a>s.</div></div></div>
 <span class="pull-right"></span></div>
 
   <div class="main-subrow">
