--- a/backend/koffee-backend/eu.yeger.koffee.routing/routing-module.html
+++ b/backend/koffee-backend/eu.yeger.koffee.routing/routing-module.html
@@ -25,7 +25,7 @@
           <div class="cover ">
             <h1 class="cover"><a data-name="routingmodule"></a>routingModule</h1>
           </div>
-<div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="block"><div class="block">Installs and configures the eu.yeger.koffee.routing and StatusPages modules.</div></div><div class="block"><h4 class="block"><a data-name="author"></a>Author</h4><div class="block">Jan Müller</div></div></div>
+<div class="divergent-group" data-filterable-current=":/main" data-filterable-set=":/main"><div class="brief-with-platform-tags"><div class="inner-brief-with-platform-tags"><div class="block"><div class="block">Installs and configures the routing and StatusPages modules.</div></div><div class="block"><h4 class="block"><a data-name="author"></a>Author</h4><div class="block">Jan Müller</div></div></div>
 <span class="pull-right"></span></div>
 
   <div class="main-subrow">
