--- a/backend/koffee-backend/eu.yeger.koffee.service/-default-user-service/-init-.html
+++ b/backend/koffee-backend/eu.yeger.koffee.service/-default-user-service/-init-.html
@@ -20,7 +20,7 @@
         <div id="searchBar"></div>
         <script type="text/javascript" src="../../../scripts/pages.js"></script>
         <script type="text/javascript" src="../../../scripts/main.js"></script>
-        <div id="content" pageIds="eu.yeger.koffee.service/DefaultUserService/&lt;init&gt;/#eu.yeger.koffee.repository.UserRepository#eu.yeger.koffee.repository.ImageRepository/PointingToDeclaration/">
+        <div id="content" pageIds="eu.yeger.koffee.service/DefaultUserService/&lt;init&gt;/#eu.yeger.koffee.repository.UserRepository/PointingToDeclaration/">
           <div class="breadcrumbs">//<a href="../../index.html">koffee-backend</a>/<a href="../index.html">eu.yeger.koffee.service</a>/<a href="index.html">DefaultUserService</a>/<a href="-init-.html">&lt;init&gt;</a></div>
           <div class="cover ">
             <h1 class="cover"><a data-name="&lt;init&gt;"></a>&lt;init&gt;</h1>
@@ -29,7 +29,7 @@
 <span class="pull-right"></span></div>
 
   <div class="main-subrow">
-    <div class="platform-hinted " data-platform-hinted="data-platform-hinted"><div class="content sourceset-depenent-content" data-active="" data-togglable=":/main"><div class="symbol "><div class="symbol monospace">fun <a href="-init-.html">&lt;init&gt;</a>(userRepository: <a href="../../eu.yeger.koffee.repository/-user-repository/index.html">UserRepository</a>, imageRepository: <a href="../../eu.yeger.koffee.repository/-image-repository/index.html">ImageRepository</a>)<span class="top-right-position"><span class="copy-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <div class="platform-hinted " data-platform-hinted="data-platform-hinted"><div class="content sourceset-depenent-content" data-active="" data-togglable=":/main"><div class="symbol "><div class="symbol monospace">fun <a href="-init-.html">&lt;init&gt;</a>(userRepository: <a href="../../eu.yeger.koffee.repository/-user-repository/index.html">UserRepository</a>)<span class="top-right-position"><span class="copy-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M5 4H15V16H5V4ZM17 7H19V18V20H17H8V18H17V7Z" fill="black"/>
                        </svg></span><div class="copy-popup-wrapper popup-to-left"><svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path d="M18 9C18 14 14 18 9 18C4 18 0 14 0 9C0 4 4 0 9 0C14 0 18 4 18 9ZM14.2 6.2L12.8 4.8L7.5 10.1L5.3 7.8L3.8 9.2L7.5 13L14.2 6.2Z" fill="#4DBB5F"/>
